--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1924,8 +1924,7 @@ footer a:hover {
     
     
     
-    #output_text{height:522px}	#input_colA,#input_colB{height:456px;}	@media (max-width: 768px){	#output_text,#input_colA,#input_colB{height:400px}	}	@media (max-width: 414px){	#output_text,#input_colA,#input_colB{height:514px}	}	@media (max-width: 412px){	#output_text,#input_colA,#input_colB{height:509px}	}	@media (max-width: 384px){	#output_text,#input_colA,#input_colB{height:418px}	}	@media (max-width: 375px){	#output_text,#input_colA,#input_colB{height:445px}	}	@media (max-width: 360px){	#output_text,#input_colA,#input_colB{height:418px}	}	@media (max-width: 320px){	#output_text,#input_colA,#input_colB{height:346px}	}
- #ma50{position:fixed!important;position:absolute;top:-1px;top:expression((t=document.documentElement.scrollTop?document.documentElement.scrollTop:document.body.scrollTop)+"px");left:2px;width:105%;height:105%;background-color:#181d23;opacity:105;display:block;padding-top:20%}#ma50 *{text-align:center;margin:0 auto;display:block;filter:none;font:bold 14px Verdana,Arial,sans-serif;text-decoration:none}#ma50~*{display:none}
+   #output_text{height:522px}	#input_colA,#input_colB{height:456px;}	@media (max-width: 768px){	#output_text,#input_colA,#input_colB{height:400px}	}	@media (max-width: 414px){	#output_text,#input_colA,#input_colB{height:514px}	}	@media (max-width: 412px){	#output_text,#input_colA,#input_colB{height:509px}	}	@media (max-width: 384px){	#output_text,#input_colA,#input_colB{height:418px}	}	@media (max-width: 375px){	#output_text,#input_colA,#input_colB{height:445px}	}	@media (max-width: 360px){	#output_text,#input_colA,#input_colB{height:418px}	}	@media (max-width: 320px){	#output_text,#input_colA,#input_colB{height:346px}	}  
 	</style>
  
  
@@ -1966,26 +1965,37 @@ footer a:hover {
     <section id="main_content">
 	<hr>
  
-  <div class="clear w-100" id="premerge">
+  <div class="widget-body">
+  <div class="clear xs-spacer-n xs-spacer-s">
+    <div class="left"><div id="file_upload" class="dropdown">
+      <button type="button" class="btn btn-sm dropdown-trigger"><i class="fa fa-folder-open-o"></i>File</button>
+      <div class="dropdown-menu"><span class="file-button">
+        <input type="file" id="upload_colA" onchange="loadTextA()" accept=".css"><label for="upload_colA">Load</label>
+        <label for="file_download">Save</label></span></div></div></div>
+    <button id="file_download" type="button" class="btn btn-sm none"><i class="fa fa-save"></i> Save</button>
+    <div class="right"><span class="switch left">
+      <input type="checkbox" id="isEmpty"></span></div></div>
+  <div class="clear spacer-n" id="options"></div>
+  <div id="premerge" class="clear w-100">
     <div class="w-50 left main">
-      <textarea class="cssmin-in" id="input_colA" value=""></textarea></div>
-    <div class="w-50 left main">
-      <textarea class="cssmin-out" id="input_colB" style="border-left: 0px;" value=""></textarea>
-      <div class="clipboard" style="margin-top: 2.4%;">
-        <span aria-label="Click to copy" class="tooltipped tooltipped-n"><i class="i-copy"></i></span></div></div>
-    <div class="clear">
-      <div class="right xs-100 xs-left">
-        <button class="btn btn-sm btn-light xs-50 xs-left" id="clearAll" type="button">Clear</button>
-        <button class="btn btn-sm xs-50 xs-leftt" id="obfuscate" type="button">Obfuscate</button></div></div></div>
-<div class="none" id="merged">
-  <div id="main"><textarea id="output_text"></textarea>
-    <div class="clipboard"><span aria-label="Click to copy" class="tooltipped tooltipped-n"><i class="i-copy"></i></span></div></div>
-  <div class="clear"><span class="left hidden-xs-down" id="instances"></span>
-    <div class="right xs-100">
-      <button class="btn btn-sm xs-100 xs-right" id="startOver" type="button">Go Back</button></div></div></div>
+      <textarea class="cssmin-in" value="" id="input_colA"></textarea></div>
+    <div class="w-50 left main"><textarea class="cssmin-out" value="" id="input_colB" style="border-left:0"></textarea>
+      <div style="margin-top:2.4%" class="clipboard">
+        <span class="tooltipped tooltipped-n" aria-label="Click to copy"><i class="i-copy"></i></span></div></div>
+    <div class="clear"><div class="right xs-100 xs-left">
+      <button id="clearAll" type="button" class="btn btn-sm btn-light xs-50 xs-left">Clear</button>
+      <button type="button" class="btn btn-sm xs-50 xs-leftt" id="obfuscate">Obfuscate</button></div></div></div>
+  <div id="merged" class="none">
+    <div id="main"><textarea id="output_text"></textarea>
+      <div class="clipboard"><span class="tooltipped tooltipped-n" aria-label="Click to copy"><i class="i-copy"></i></span></div></div>
+    <div class="clear"><span class="left hidden-xs-down" id="instances"></span>
+      <div class="right xs-100">
+        <button id="startOver" type="button" class="btn btn-sm xs-100 xs-right">Go Back</button>
+      </div></div></div></div>
+ 
 	
   
-<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GoojDex/safe@main/HTML_Obfuscator.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GoojDex/safe@main/Javascript_Obfuscator.js"></script>
 
 <div class="center-align" id="credits" style="text-align: center;">Powered by <a class="teal-text" href="https://goojdextools.blogspot.com/" id="creditlink" rel="dofollow" target="_blank">Dev Chandel</a></div><div class="center-align" style="text-align: center;"></div>
 
