--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1963,7 +1963,7 @@ footer a:hover {
   </header>
   <div class="container">
     <section id="main_content">
-	<hr>
+	
  
   <div class="widget-body">
   <div class="clear xs-spacer-n xs-spacer-s">
@@ -1999,7 +1999,7 @@ footer a:hover {
 
 <div class="center-align" id="credits" style="text-align: center;">Powered by <a class="teal-text" href="https://goojdextools.blogspot.com/" id="creditlink" rel="dofollow" target="_blank">Dev Chandel</a></div><div class="center-align" style="text-align: center;"></div>
 
-    </section><br />
+    </section>
 
     <footer id="footer">
      <marquee class="GeneratedMarquee" direction="left" scrollamount="4" behavior="scroll">Welcome To Dev Chandel, Web Development & Design, Training Services, Android Application Development, Software Development, Designing Services, Digital Marketing Services, Bookkeeping Services, Consultancy Services, Training Services, IT Support, Digital Printing Services, Much More Services Provided By Dev Chandel.</marquee>
