--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,7 +90,7 @@
     </section><br/>
 
     <footer id="footer">
-     <nbsrvff dmbtt="HfofsbufeNbsrvff" ejsfdujpo="mfgu" tdspmmbnpvou="4" cfibwjps="tdspmm">Xfmdpnf Up Efw Diboefm, Xfc Efwfmpqnfou & Eftjho, Usbjojoh Tfswjdft, Boespje Bqqmjdbujpo Efwfmpqnfou, Tpguxbsf Efwfmpqnfou, Eftjhojoh Tfswjdft, Ejhjubm Nbslfujoh Tfswjdft, Cppllffqjoh Tfswjdft, Dpotvmubodz Tfswjdft, Usbjojoh Tfswjdft, JU Tvqqpsu, Ejhjubm Qsjoujoh Tfswjdft, Nvdi Npsf Tfswjdft Qspwjefe Cz Efw Diboefm.</nbsrvff>
+     <marquee class="GeneratedMarquee" direction="left" scrollamount="4" behavior="scroll">Welcome To Dev Chandel, Web Development & Design, Training Services, Android Application Development, Software Development, Designing Services, Digital Marketing Services, Bookkeeping Services, Consultancy Services, Training Services, IT Support, Digital Printing Services, Much More Services Provided By Dev Chandel.</marquee>
      
         <center> <div class='text-center small'>
           Copyright &#169; 2021 - <script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> 
