--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
   
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/GoojDex/safe@main/Javascript_Obfuscator.js"></script>
 
-<div class="center-align" id="credits" style="text-align: center;">Powered by <a class="teal-text" href="https://goojdextools.blogspot.com/" id="creditlink" rel="dofollow" target="_blank">Dev Chandel</a></div><div class="center-align" style="text-align: center;"></div>
+<div class="center-align" id="credits" style="text-align: center;">Powered by <a class="teal-text" href="https://goojdextools.blogspot.com/" id="creditlink" rel="dofollow" target="_blank">Dev Chande</a></div><div class="center-align" style="text-align: center;"></div>
 
     </section><br/>
 
