--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="#">
+	<meta content='follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large' name='robots'/>
   <link rel="icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <link href="https://fonts.googleapis.comcss?family=Roboto:300,400,500" rel="stylesheet">
